# MPI

MPI_1/: CMakeLists.txt  Sole.cpp  Sole.h  main.cpp
MPI_1/Matrix/: Column.h  Matrix.cpp  Matrix.h
MPI_1/Scan/: Scaner.cpp  Scaner.h
MPI_2/: CMakeLists.txt  Distribution.h  Sole.cpp  Sole.h  main.cpp
MPI_2/Matrix/: Column.h  Matrix.cpp  Matrix.h
MPI_2/Scan/: Scaner.h
MPI_3/: Distribution.cpp  Distribution.h  Sole.cpp  Sole.h  main.cpp
MPI_3/Matrix/: Column.h  Matrix.cpp  Matrix.h
MPI_3/Scan/: Scaner.cpp
Profiling/: mpi_2.clog2  mpi_2.slog2  mpi_3.clog2  mpi_3.slog2
